--- a/homeflix home.html
+++ b/homeflix home.html
@@ -16,6 +16,6 @@
     <link rel="stylesheet" href=".css">
 </head>
 <body>
-    <a href="https://fzmovies.live"><img src="home.jpg" alt="NO INTERNET CONNECTION!!"></a>
+    <a href="https://fzmovies.live"><img src="https://m-i-d-e772.github.io/ZEE/home.jpg" alt="NO INTERNET CONNECTION!!"></a>
 </body>
 </html>
