--- a/Timeless - mide.html
+++ b/Timeless - mide.html
@@ -10,11 +10,11 @@
 <body>
     <header id="header">
         <div class="back_button">
-            <span> <ion-icon name="chevron-back-outline"></ion-icon> </span>
+            <span> <ion-icon onclick="back()" name="chevron-back-outline"></ion-icon> </span>
         </div>
         <div class="other_options">
-            <span id="cross"> <ion-icon class="cross" name="add-circle-outline"></ion-icon> </span>
-            <span id="options"><ion-icon name="ellipsis-horizontal-outline"></ion-icon></span>
+            <span id="cross"> <ion-icon onclick="display()" class="cross" name="add-circle-outline"></ion-icon> </span>
+            <span id="options"><ion-icon onclick="line()"  name="ellipsis-horizontal-outline"></ion-icon></span>
         </div>
     </header>
 <div class="container_head">
